# scope

./: .gitignore  ADK_TOOL_CALLING.md  OBSERVABILITY.md  README.md  TESTING.md  article.md  check_users.py  example_config.py  pyproject.toml  pytest.ini  test_escalation_datetime.py  test_new_prompt.py  test_tools.py
demo/: README.md  USER_SWITCHING_GUIDE.md  neurips_demo_plan.md  normal_user_session.json  reset_demo.py  seed_test_users.py  switch_user.py
prime_guardrails/: __init__.py  agent.py  callbacks.py  config.py  observability_tools.py  prompt.py  tools.py
prime_guardrails/compliance/tests/: test_compliance.py
prime_guardrails/data/: database.py  models.py  seed_database.py  tools.py
prime_guardrails/data/storage/: README.md
prime_guardrails/escalation/: __init__.py  models.py  queue.py
prime_guardrails/escalation/data/: README.md
prime_guardrails/escalation/tests/: test_escalation.py
prime_guardrails/iam/: __init__.py  acl.py  roles.py
prime_guardrails/iam/tests/: test_iam.py
prime_guardrails/logging/: __init__.py  audit.py  compliance_log.py  view_logs.py
prime_guardrails/safety/: __init__.py  tools.py
prime_guardrails/tests/: test_prompt.py
scope/: __init__.py  agent.py  callbacks.py  config.py  observability_tools.py  prompt.py  tools.py
scope/compliance/: __init__.py  examples.py  rules.py
scope/data/: __init__.py  database.py  models.py  seed_database.py  tools.py
scope/escalation/: models.py
scope/iam/: __init__.py  acl.py  roles.py
scope/logging/: README.md  audit.py  view_logs.py
scope/rules/: __init__.py  compliance_rules.yaml  loader.py  safety_rules.yaml
scope/safety/: __init__.py  tools.py
scope/tests/: test_fixes.py  test_prompt.py  test_safety_layer1.py
tests/: test_agent_integration.py  test_integration.py
(+8 files in other folders)
